[project]
name = "ethics-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Björn Bethge"}
]
requires-python = ">=3.11"
dependencies = [
    "bitsandbytes>=0.45.5",
    "pytorch-symbolic>=1.1.1",
    # "torch" NICHT hier eintragen! Für CUDA siehe README und installiere das passende Wheel manuell nach dem uv sync:
    # uv pip install torch==2.6.0+cu126 --index-url https://download.pytorch.org/whl/cu126 --force-reinstall
    "torch-geometric>=2.6.1",
    "spacy>=3.7.2", # Required for both GraphBrain and SimpleGraph
    "plotly>=5.18.0", # For visualizations
    "polars>=0.18.15", # For data processing
    "graphbrain",
    "aiohttp>=3.10.11",
    "filelock>=3.16.0",
    "protobuf>=5.26.1",
    "requests>=2.32.2",
    "werkzeug>=3.0.6",
]

[project.optional-dependencies]
graphbrain = [
    "graphbrain>=0.5.0",    # Optional semantic hypergraph library
]
train = [
    "accelerate>=1.6.0",
    "datasets>=3.5.1",
    "hf-transfer>=0.1.9",
    "huggingface_hub>=0.30.2",
    "nlpaug>=1.1.11",
    "optimum>=1.24.0",
    "peft>=0.15.2",
    "pyarrow>=20.0.0",
    "safetensors>=0.4.3",
    "tensorboard>=2.16.0",
    "torch-tb-profiler>=0.4.3",
    "transformers>=4.50.0",
    "transformers_stream_generator>=0.0.5",
    # For Linux: https://github.com/bitsandbytes-foundation/bitsandbytes/releases/download/continuous-release_multi-backend-refactor/bitsandbytes-0.44.1.dev0-py3-none-manylinux_2_24_x86_64.whl
    # Windows: install bitsandbytes manually after syncing dependencies:
    # pip install --force-reinstall "https://github.com/bitsandbytes-foundation/bitsandbytes/releases/download/continuous-release_multi-backend-refactor/bitsandbytes-0.44.1.dev0-py3-none-win_amd64.whl"
]
dev = [
    "pytest>=7.4.0",
    "tensorboard>=2.16.0",
    "torch-tb-profiler>=0.4.3"
]
full = [
    # All dependencies for training, development, and testing
    "accelerate>=1.6.0",
    "datasets>=3.5.1",
    "hf-transfer>=0.1.9",
    "huggingface_hub>=0.30.2",
    "nlpaug>=1.1.11",
    "optimum>=1.24.0",
    "peft>=0.15.2",
    "pyarrow>=20.0.0",
    "pytest>=7.4.0",
    "plotly>=5.18.0",
    "polars>=0.18.15",
    "safetensors>=0.4.3",
    "tensorboard>=2.16.0",
    "torch-tb-profiler>=0.4.3",
    "transformers>=4.50.0",
    "transformers_stream_generator>=0.0.5",
    # For Linux: https://github.com/bitsandbytes-foundation/bitsandbytes/releases/download/continuous-release_multi-backend-refactor/bitsandbytes-0.44.1.dev0-py3-none-manylinux_2_24_x86_64.whl
    # Windows: install bitsandbytes manually after syncing dependencies:
    # pip install --force-reinstall "https://github.com/bitsandbytes-foundation/bitsandbytes/releases/download/continuous-release_multi-backend-refactor/bitsandbytes-0.44.1.dev0-py3-none-win_amd64.whl"
]

[tool.uv]

link-mode = "copy"
compile-bytecode = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
